crates/atlas-cli/tests/snapshots/ast_dump_tests__ast_dump_while_loop.snap
---
source: crates/atlas-cli/tests/ast_dump_tests.rs
expression: json
---
{
  "ast_version": 2,
  "items": [
    {
      "Statement": {
        "VarDecl": {
          "mutable": false,
          "name": {
            "name": "i",
            "span": {
              "start": 5,
              "end": 6
            }
          },
          "type_ref": {
            "Named": [
              "number",
              {
                "start": 8,
                "end": 14
              }
            ]
          },
          "init": {
            "Literal": [
              {
                "Number": 0.0
              },
              {
                "start": 17,
                "end": 18
              }
            ]
          },
          "span": {
            "start": 1,
            "end": 19
          }
        }
      }
    },
    {
      "Statement": {
        "While": {
          "cond": {
            "Binary": {
              "op": "Lt",
              "left": {
                "Identifier": {
                  "name": "i",
                  "span": {
                    "start": 27,
                    "end": 28
                  }
                }
              },
              "right": {
                "Literal": [
                  {
                    "Number": 10.0
                  },
                  {
                    "start": 31,
                    "end": 33
                  }
                ]
              },
              "span": {
                "start": 27,
                "end": 33
              }
            }
          },
          "body": {
            "statements": [
              {
                "Assign": {
                  "target": {
                    "Name": {
                      "name": "i",
                      "span": {
                        "start": 41,
                        "end": 42
                      }
                    }
                  },
                  "value": {
                    "Binary": {
                      "op": "Add",
                      "left": {
                        "Identifier": {
                          "name": "i",
                          "span": {
                            "start": 45,
                            "end": 46
                          }
                        }
                      },
                      "right": {
                        "Literal": [
                          {
                            "Number": 1.0
                          },
                          {
                            "start": 49,
                            "end": 50
                          }
                        ]
                      },
                      "span": {
                        "start": 45,
                        "end": 50
                      }
                    }
                  },
                  "span": {
                    "start": 41,
                    "end": 51
                  }
                }
              }
            ],
            "span": {
              "start": 35,
              "end": 53
            }
          },
          "span": {
            "start": 20,
            "end": 53
          }
        }
      }
    }
  ]
}
